fix: align section types to pixelPerfect

--- a/sass/_grid.sass
+++ b/sass/_grid.sass
@@ -2,3 +2,5 @@
   width: 100%
   max-width: 1276px
   margin: 0 auto
+.section.types > .container
+  max-width: 1236px
